--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+v0.1.2	Thu Aug 29 22:25:30 BST 2013
+
+  	* Corrected typos in POD.
+
 v0.1.2	Thu Aug 29 22:14:08 BST 2013
 
   	* Added Changes file.
