--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     Readonly::Enum - enumerated scalar values
 
-SYNOPSYS
+SYNOPSIS
       use Readonly::Enum;
 
       # $foo = 1, $bar = 2, etc.
