--- a/Changes
+++ b/Changes
@@ -1,20 +1,25 @@
-v0.1.2	Thu Aug 29 22:25:30 BST 2013
+v0.1.4
 
-  	* Corrected typos in POD.
+        - Corrected typo in Changes and reformatted to
+          CPAN::Changes::Spec.
 
-v0.1.2	Thu Aug 29 22:14:08 BST 2013
+v0.1.3	2013-08-29
 
-  	* Added Changes file.
+  	- Corrected typos in POD.
 
-  	* Corrected typos in POD.
+v0.1.2	2013-08-29
 
-	* Minimum perl version is v5.10.
+  	- Added Changes file.
 
-	* Fixed MANIFEST.
+  	- Corrected typos in POD.
 
-v0.1.1  Thu Aug 29 21:26:00 BST 2013
+	- Minimum perl version is v5.10.
 
-  	* Initial release on CPAN.
+	- Fixed MANIFEST.
+
+v0.1.1  2013-08-29
+
+  	- Initial release on CPAN.
 
 
 
